# medvlm

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/calibration/: index.html
api/confidence/: index.html
api/data-models/: index.html
data/: README.md
docs/: getting-started.md  index.md
docs/api/: calibration.md  confidence.md  data-models.md
docs/examples/: calibration.md  hac.md  overconfidence.md
examples/: calibration.py  hac.py  overconfidence.py
examples/calibration/: index.html
examples/hac/: index.html
examples/overconfidence/: index.html
experiments/: 01_generate_sampling.py  02_generate_verbalized.py  03_generate_hedge.py  04_postprocess.py  05_export_raw_table.py  README.md  config.py
getting-started/: index.html
search/: search_index.json
src/medvlm/: __init__.py  api.py
src/medvlm/confidence/: __init__.py  hedge.py  sampling.py  verbalized.py
src/medvlm/configs/: __init__.py  defaults.py  prompts.py  registry.py  schemas.py
src/medvlm/data/: __init__.py  collators.py  datasets.py
src/medvlm/evaluation/: __init__.py  calibration.py
src/medvlm/inference/: __init__.py  predictor.py
src/medvlm/models/: __init__.py  loader.py  two_stage_loader.py
src/medvlm/utils/: __init__.py  helpers.py
tests/: phase3_integration.py  phase_emulation.py  smoke_2b.py  test_phase1_calibration.py  test_phase1_misc.py  test_phase1_parsers.py  test_phase2_data.py
