[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medvlm"
version = "0.1.0"
description = "Medical VLM toolkit: inference, confidence estimation, hallucination scoring (HEDGE/VASE), and calibration (incl. HAC)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Young Joon Park"},
]
keywords = [
    "medical-vqa", "calibration", "hallucination",
    "vision-language-models", "vlm", "confidence-estimation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.6.0",
    "transformers>=4.45.0",
    "datasets>=2.19.0",
    "accelerate>=0.27.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
hedge = [
    "hedge-bench",
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pandas>=1.3.0",
    "pyarrow>=12.0.0",
    "timm>=0.9.0",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
all = [
    "medvlm[hedge,dev]",
]

[project.urls]
Homepage = "https://github.com/JiyoungByun/medvlm"
Repository = "https://github.com/JiyoungByun/medvlm"
Documentation = "https://jiyoungbyun.github.io/medvlm"
Issues = "https://github.com/JiyoungByun/medvlm/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["medvlm*"]
